deployments/wordpress/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: wordpress
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      tier: mariadb
  template:
    metadata:
      labels:
        app: wordpress
        tier: mariadb
    spec:
      serviceAccountName: default
      containers:
      - name: mariadb
        image: docker.io/bitnami/mariadb:10.11.8
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mariadb-data
          mountPath: /var/lib/mysql
        securityContext:
          allowPrivilegeEscalation: false
      volumes:
      - name: mariadb-data
        persistentVolumeClaim:
          claimName: mariadb-pvc
