deployments/wordpress/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      serviceAccountName: default
      containers:
      - name: wordpress
        image: docker.io/library/wordpress:6.5-apache
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: wordpress-data
          mountPath: /var/www/html
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 1001
          capabilities:
            drop:
              - ALL
      volumes:
      - name: wordpress-data
        persistentVolumeClaim:
          claimName: wordpress-pvc
