deployments/wordpress/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress
spec:
  type: NodePort
  selector:
    app: wordpress
    tier: frontend
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30081
